--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,3 +26,8 @@ spring.thymeleaf.suffix=.html
 # Port ¹× context root ¼³Á¤
 server.port=8080
 server.servlet.context-path=/
+
+
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.com.practice=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
